--- a/src/Makefile.UPQUARK
+++ b/src/Makefile.UPQUARK
@@ -1,12 +1,9 @@
 AR=ar
 RANLIB=ranlib
-CC=mpcc
-
-#... Some module systems will declare this automtacially
-HDF5_BASE=/opt/ppc64le/spack/0.9.1/opt/spack/linux-ppc64le/xl-13.1/hdf5-1.8.16-hft56aiahq522onfy5trizdhzkcfjbqq/
+CC=mpicc
 
 #... Adjust according to compiler
-CFLAGS=-O2 -I./ -D_GNU_SOURCE 
+CFLAGS=-O2 -I./ -D_GNU_SOURCE -fopenmp
 
 #... Path to qhg.h
 QHG_INC=-I$(HOME)/QuaHoG/lib
@@ -25,8 +22,8 @@ MG_INC=-I$(HOME)/DDalphaAMG/include
 CFLAGS+=$(MG_INC)
 
 #... Path to hdf5.h
-HDF5_INC=-I$(HDF5_BASE)/include
-CFLAGS+=$(HDF5_INC)
+# HDF5_INC=-I$(HDF5_BASE)/include
+# CFLAGS+=$(HDF5_INC)
 
 #... Paths to libraries
 LDFLAGS=
@@ -48,11 +45,11 @@ MG_LIB=-L$(HOME)/DDalphaAMG/lib
 LDFLAGS+=$(MG_LIB)
 
 #... Path to libhdf5.a
-HDF5_LIB=-L$(HDF5_BASE)/lib
-LDFLAGS+=$(HDF5_LIB)
+# HDF5_LIB=-L$(HDF5_BASE)/lib
+# LDFLAGS+=$(HDF5_LIB)
 
 #... Order may matter depending on compiler
-LIBS=-lqhg -lDDalphaAMG -llime -lmxml -lhdf5
+LIBS=-lqhg -lDDalphaAMG -llime -lmxml -lhdf5 -fopenmp
 
 # Targets
 main: main.o parser.o mg_interface.o
