Added program to calculate meson two- and three-point functions

--- a/src/Makefile
+++ b/src/Makefile
@@ -6,19 +6,19 @@ CC=mpiicc
 CFLAGS=-O3 -D_GNU_SOURCE -I./ -std=gnu99 -fopenmp -xCORE-AVX2
 
 #... Path to qhg.h
-QHG_INC=-I$(HOME)/BDW/QuaHoG/lib
+QHG_INC=-I$(HOME)/QuaHoG/lib
 CFLAGS+=$(QHG_INC)
 
 #... Path to lime.h
-LIME_INC=-I$(HOME)/BDW/install/include
+LIME_INC=-I$(HOME)/install/include
 CFLAGS+=$(LIME_INC)
 
 #... Path to mxml.h
-MXML_INC=-I$(HOME)/BDW/install/include
+MXML_INC=-I$(HOME)/install/include
 CFLAGS+=$(MXML_INC)
 
 #... Path to DDalphaAMG.h
-MG_INC=-I$(HOME)/BDW/DDalphaAMG/include
+MG_INC=-I$(HOME)/DDalphaAMG/include
 CFLAGS+=$(MG_INC)
 
 #... Path to hdf5.h
@@ -29,19 +29,19 @@ CFLAGS+=$(HDF5_INC)
 LDFLAGS="-xCORE-AVX2"
 
 #... Path to libqhg.a
-QHG_LIB=-L$(HOME)/BDW/QuaHoG/lib
+QHG_LIB=-L$(HOME)/QuaHoG/lib
 LDFLAGS+=$(QHG_LIB)
 
 #... Path to liblime.a
-LIME_LIB=-L$(HOME)/BDW/install/lib
+LIME_LIB=-L$(HOME)/install/lib
 LDFLAGS+=$(LIME_LIB)
 
 #... Path to libmxml.a
-MXML_LIB=-L$(HOME)/BDW/install/lib
+MXML_LIB=-L$(HOME)/install/lib
 LDFLAGS+=$(MXML_LIB)
 
 #... Path to libDDalphaAMG.a
-MG_LIB=-L$(HOME)/BDW/DDalphaAMG/lib
+MG_LIB=-L$(HOME)/DDalphaAMG/lib
 LDFLAGS+=$(MG_LIB)
 
 #... Path to libhdf5.a
